# Krypton

./: .dockerignore  .env.example  .env.orchestrator  .gitignore  AGENTS.md  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.coolify.yml  docker-compose.hotreload.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json
cursor_project_rules/: README.md  implementation-plan.mdc  tech-stack.mdc
docker-assets/: app-Cxsvg8AK.js  app-wjDjGD9U.css  browser-Dli20sdb.js  connect-solana-BnRxy0Bs.js  create-0SP1OTyt.js  dist-BuyRd4Pl.js  dist-C-U7E9GH.js  dist-Cpdcv-_X.js  docs-Cgn6rejI.js  esm-CoSDrkI5.js  eventemitter3-BgM8te56.js  eventemitter3-Di4QU9Cs.js  hmac-DhZobDqD.js  index-COb4mCuP.js  index-de0119fe-DKncn-hP.js  invite-DCcOuQy3.js  link-CHECQpzJ.js  loader-BlcFDDT7.js  matchContext-BDDIesDT.js  mm-install-modal_2.entry-Bjr7fvox.js  mock-data-CdzHgrNc.js  nodecrypto-eZ3acP4z.js  pako.esm-DPn-aQFz.js  purejs-Cg3p_5oG.js  route-BpUffYw9.js  route-DOvM0wMo.js  routes-CJBDCKfu.js  secp256k1-C8JNT1v3.js  sha256-uint8array-Bpfr4x8F.js  src-Cqj9fWms.js  tslib.es6-BwM4sMrh.js  useNavigate-CCn4jLd2.js  utils-PAv_Hbcx.js  vault._id-CVWgCtAg.js  vault._id.activity-CKSp3Vd4.js  vault._id.policy-BRSZDteZ.js  webcrypto-CtFtl0n_.js
docker-server/: __root-BuMiPQ8f.mjs  _tanstack-start-manifest_v-DysyyiXx.mjs  index.mjs  package.json
docs/: BRAND-IDENTITY.md  MAINNET-PRIVATE-BETA-MAP.md  PLATFORM-TODO.md  mint.json  overview.md  (+1 more)
programs/krypton_core/: Cargo.toml
programs/krypton_core/src/: lib.rs
programs/krypton_core/tests/: devnet.test.ts
(+1803 files in other folders)
